fix spacing issue on non-mobile (#2022)
* fix spacing issue on non-mobile

* use the media breakpoints instead of not using them

--- a/apps/site/assets/css/_content.scss
+++ b/apps/site/assets/css/_content.scss
@@ -217,7 +217,9 @@
   }
 
   .event-description-with-sidebar & { // FMCB livestream iframe
-    padding-bottom: 56.25%; // 16x9 Aspect Ratio
+    @include media-breakpoint-down(sm) {
+      padding-bottom: 56.25%; // 16x9 Aspect Ratio
+    }
   }
 }
 
